Added buggi endpoint and fixed test bug